--- a/vlctest/GridForm.resx
+++ b/vlctest/GridForm.resx
@@ -117,73 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="MenuImageList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
+  <metadata name="Column1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
   </metadata>
-  <data name="MenuImageList.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
-    <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
-        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACM
-        CgAAAk1TRnQBSQFMAgEBAgEAAcABAAHAAQABFAEAARQBAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFQ
-        AwABFAMAAQEBAAEgBgABGRoAAygBPQNEAXk0AAMgAS8DSwGO/AADGAEhAV8CWAHjAxwBJywAAwYBCANV
-        AbUDNgFZCAADPgFrAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHN
-        AVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAyYBOKgA
-        AwIBAwNFAX0BWgJXAcUsAANKAYoBXAJZAcwDBwEKCAADNQFVAWEBCQEAAf8BYQEJAQAB/wFhAQkBAAH/
-        AWEBCQEAAf8BYQEJAQAB/wFhAQkBAAH/AWEBCQEAAf8BYQEJAQAB/wFhAQkBAAH/AWEBCQEAAf8BYQEJ
-        AQAB/wFhAQkBAAH/AWEBCQEAAf8BYQEJAQAB/wFhAQkBAAH/AWEBCQEAAf8BYQEJAQAB/wMSARmwAAFM
-        AksBkAFbAlgBxgMlATccAAMUARsDSgGNAVgCVgHBAxEBFwwAAxgBIQFhAQkBAAH/AWEBCQEAAf8BYQEJ
-        AQAB/wFhAQkBAAH/AWEBCQEAAf8BYQEJAQAB/wFhAlgB5gFhAl0B4gFhAQkBAAH/AV4CWgHVAWEBCQEA
-        Af8BYQEJAQAB/wFhAQkBAAH/AWEBCQEAAf8BYQEJAQAB/wFhAQkBAAH/AWACWgHeuAABOgI5AWABagFB
-        AT8B+QNTAaoDDAEQDAADBAEGAz8BbQFiAkgB9gFZAlcBvwMEAQYUAAFeAlsB2QFhAQkBAAH/AWEBCQEA
-        Af8BYQEJAQAB/wFhAQkBAAH/AWEBCQEAAf8BPQI8AWcBTgJNAZYBYQEJAQAB/wM3AloCWAHAAWEBCQEA
-        Af8BYQEJAQAB/wFhAQkBAAH/AWEBCQEAAf8BYQEJAQAB/wFHAkYBgLwAAxwBKANOAZkBTwE6ASsB/QFh
-        AloB5AFcAlkBzAFgAloB3gFZAkIB9QFcAlgB0QMpAT4cAAM8AWYBYQEJAQAB/wFhAQkBAAH/AWEBCQEA
-        Af8BYQEJAQAB/wFiAlgB7wMZASMDPQFpAWEBCQEAAf8DJwE7AzABSwFPAToBKwH9AWEBCQEAAf8BYQEJ
-        AQAB/wFhAQkBAAH/AWUBUgFQAfQDIwEzuAADBwEKA0UBfQFiAlgB7wFTAk8BpQM1AVYDEwEaAysEQgF1
-        AWECXAHcAVYCVQGxAxgBIRgAAwsBDwFWAlUBtAFhAloB5AFqAUEBPwH5AWEBCQEAAf8BXAJYAdEDBgEI
-        AU8CTgGXAV4CXAHOAzUBVwMVAR0BYgJYAekBYQEJAQAB/wFZAkIB9QFeAlgB3QNMAZMDBAEGtAADBAEF
-        AVoCVwG9AVgCVgHBAxkBIwMBAQIPAAEBAxABFQNEAXoBZAJZAewDGgEkGAADAgEDAxIBGAMfASwBUgJQ
-        AaMBUgJRAaEDBwEKA1EBogNWAbYBRQJEAXwDCgEOAV4CWwHZAUoCSQGJAx0BKQMNARK8AANBAXIBZAJZ
-        AewDFgEfHAADCAELA1EBogFYAlYBuSgAAx4BKwFNAkwBkQMYASIEAAMtAUYDSgGKAxMBGsgAAV4CWwHZ
-        AyEBMCgAAV4CWwHZAyMBMyQAAUcCRgGAAxMBGgwAAx8BLQMuAUfEAAMgAS4BYAJcAdQsAAFVAlMBrQFO
-        Ak0BlSAAAw0BEQFSAlABpBAAAwoBDgNQAZoDBAEGwAADPAFmA1YBtgMgAS4DTAGSAVwCWgHNAVwCWgHN
-        A0wBkwMgAS4DBAEFBAADDQESA0IBdgFhAQkBAAH/AWEBCQEAAf8BXAJZAcwgAANIAYUDJgE5AUgCRwGD
-        AzsBZQMFAQcDQwF3AT0CPAFnAzsBYwE+Aj0BasAAAzwBZgFnAVkBVwHyAWoBQQE/AfkBYQEJAQAB/wFh
-        AQkBAAH/AWEBCQEAAf8BYQEJAQAB/wFqAUEBPwH5A0oBjQMNARIDWQHHAWEBCQEAAf8BYQEJAQAB/wFh
-        AQkBAAH/AVwCWQHMIAABRgJFAX4DGAEiAxoBJQM3AVoBSQJIAYcDKAE9AyYBOAMYASIBRwJGAYHAAAM1
-        AVcBYQEJAQAB/wFhAQkBAAH/AWEBCQEAAf8BYQEJAQAB/wFhAQkBAAH/AWEBCQEAAf8BYQEJAQAB/wFh
-        AQkBAAH/AWECWwHhAWEBCQEAAf8BYQEJAQAB/wFhAQkBAAH/AWEBCQEAAf8BVwJWAbggAAFMAksBjwMw
-        AUwBPQI8AWcDOAFeAxsBJgM6AWIDOgFhAzUBVwFFAkQBfMQAAWICSAH2AWEBCQEAAf8BYQEJAQAB/wFh
-        AQkBAAH/AWEBCQEAAf8BYQEJAQAB/wFhAQkBAAH/AWEBCQEAAf8BYQEJAQAB/wFhAQkBAAH/AWEBCQEA
-        Af8BYQEJAQAB/wFhAQkBAAH/AzcBWiAAA04BmAI9ATwBZxQAA04BmQMxAU3EAANLAY4BYQEJAQAB/wFh
-        AQkBAAH/AWEBCQEAAf8BYQEJAQAB/wFhAQkBAAH/AWEBCQEAAf8BYQEJAQAB/wFhAQkBAAH/AWEBCQEA
-        Af8BYQEJAQAB/wFhAQkBAAH/AVwCWAHRAwcBCiAAA04BmANIAYYEAAMGAQgDHAEnBAADCAELAV0CWQHX
-        AzEBTcQAAxYBHgFfAlcB6AFhAQkBAAH/AWEBCQEAAf8BYQEJAQAB/wFhAQkBAAH/AWEBCQEAAf8BYQEJ
-        AQAB/wFhAQkBAAH/AWEBCQEAAf8BYQEJAQAB/wFgAisB/AIxATABTSQAAUYCRQF+AWcBWQFXAfIDRAF5
-        AV0CWQHSAWEBCQEAAf8DUwGqA1EBogFZAkIB9QMgAS7IAAMVAR0BYAJbAdYBYQEJAQAB/wFhAQkBAAH/
-        AWEBCQEAAf8BYQEJAQAB/wFhAQkBAAH/AWEBCQEAAf8BYQEJAQAB/wFdAk4B8AMvAUkDAgEDJAADGAEi
-        AVkCQgH1AWEBCQEAAf8BYQEJAQAB/wFhAQkBAAH/AWEBCQEAAf8BZwFZAVcB8gMuAUjQAAMVAR0BTQJM
-        AZEBXgJaAdgBXwEjASEB+wFhAQkBAAH/AWEBCQEAAf8BZQJeAeUBVQJTAa0DJQE3MAADIQEwA1EBogFc
-        AlkBzAFcAlkBzAFYAlYBuQM4AV0DAQEC4AADIQEwAwQBBv8AEQABQgFNAT4HAAE+AwABKAMAAVADAAEU
-        AwABAQEAAQEFAAHwFwAD/wEAAc8B/wGfAv8HAAHHAf8BGAkAAccB/wEYCQAB8QH8ATgBAAEBBwAB+AFw
-        AXwBAAEBBwAB/AEBAfwBAAEBBwAB+AEAAfwBAAEBBwAB8AFwAX4BAAEHBwAB8QH8AX8B4gE/BwAB8wH/
-        AT8B5wE/BwAB5wH/AT8BzwEfBwAB4AEIAT8BwAEfBwAB4AEAAT8BwAEfBwAB4AEAAT8BwAEfBwAB8AEA
-        AT8BzwGfBwAB8AEAAT8ByQEfBwAB8AEAAX8BwAEfBwAB+AEAAX8BwAE/BwAB/AEBAf8B4AE/BwAB/wHP
-        A/8HAAs=
-</value>
-  </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnAddStudent.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACQAAAAYCAYAAACSuF9OAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAAsMAAALDAE/QCLIAAAAj0lE
-        QVRIS+2WQQqAIBREO4rXyVt5VCHsGOVfDLQIxj8GSjjwIF6bh7loCynvlVK5BmMNuwXNEAOKBb29GMYK
-        YqwghjsIY05FOiGMOQX5k2HMeem6QxhzHrovNcZcK91BBsZcC/86IYw5D3IQxpwXKQhjTsEdhDGn0n2p
-        v2YFMaYMmukn/7SgaA8POYojpBxv1o2xX8GhcRQAAAAASUVORK5CYII=
-</value>
-  </data>
-  <metadata name="memberMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>188, 17</value>
+  <metadata name="Column2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column3.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
   </metadata>
 </root>
