--- a/SharedForms/Resource1.resx
+++ b/SharedForms/Resource1.resx
@@ -196,4 +196,7 @@
   <data name="playvoice" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\playvoice.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="新消息" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\新消息.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
