--- a/NewTeacher/Team/TeamDiscuss.resx
+++ b/NewTeacher/Team/TeamDiscuss.resx
@@ -124,53 +124,52 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACM
-        CgAAAk1TRnQBSQFMAgEBAgEAAcABAAHAAQABFAEAARQBAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFQ
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACE
+        CgAAAk1TRnQBSQFMAgEBAgEAAcgBAAHIAQABFAEAARQBAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFQ
         AwABFAMAAQEBAAEgBgABGRoAAygBPQNEAXk0AAMgAS8DSwGO/AADGAEhAV8CWAHjAxwBJywAAwYBCANV
         AbUDNgFZCAADPgFrAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHN
         AVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAVwCWgHNAyYBOKgA
-        AwIBAwNFAX0BWgJXAcUsAANKAYoBXAJZAcwDBwEKCAADNQFVAWEBCQEAAf8BYQEJAQAB/wFhAQkBAAH/
-        AWEBCQEAAf8BYQEJAQAB/wFhAQkBAAH/AWEBCQEAAf8BYQEJAQAB/wFhAQkBAAH/AWEBCQEAAf8BYQEJ
-        AQAB/wFhAQkBAAH/AWEBCQEAAf8BYQEJAQAB/wFhAQkBAAH/AWEBCQEAAf8BYQEJAQAB/wMSARmwAAFM
-        AksBkAFbAlgBxgMlATccAAMUARsDSgGNAVgCVgHBAxEBFwwAAxgBIQFhAQkBAAH/AWEBCQEAAf8BYQEJ
-        AQAB/wFhAQkBAAH/AWEBCQEAAf8BYQEJAQAB/wFhAlgB5gFhAl0B4gFhAQkBAAH/AV4CWgHVAWEBCQEA
-        Af8BYQEJAQAB/wFhAQkBAAH/AWEBCQEAAf8BYQEJAQAB/wFhAQkBAAH/AWACWgHeuAABOgI5AWABagFB
-        AT8B+QNTAaoDDAEQDAADBAEGAz8BbQFiAkgB9gFZAlcBvwMEAQYUAAFeAlsB2QFhAQkBAAH/AWEBCQEA
-        Af8BYQEJAQAB/wFhAQkBAAH/AWEBCQEAAf8BPQI8AWcBTgJNAZYBYQEJAQAB/wM3AloCWAHAAWEBCQEA
-        Af8BYQEJAQAB/wFhAQkBAAH/AWEBCQEAAf8BYQEJAQAB/wFHAkYBgLwAAxwBKANOAZkBTwE6ASsB/QFh
-        AloB5AFcAlkBzAFgAloB3gFZAkIB9QFcAlgB0QMpAT4cAAM8AWYBYQEJAQAB/wFhAQkBAAH/AWEBCQEA
-        Af8BYQEJAQAB/wFiAlgB7wMZASMDPQFpAWEBCQEAAf8DJwE7AzABSwFPAToBKwH9AWEBCQEAAf8BYQEJ
-        AQAB/wFhAQkBAAH/AWUBUgFQAfQDIwEzuAADBwEKA0UBfQFiAlgB7wFTAk8BpQM1AVYDEwEaAysEQgF1
-        AWECXAHcAVYCVQGxAxgBIRgAAwsBDwFWAlUBtAFhAloB5AFqAUEBPwH5AWEBCQEAAf8BXAJYAdEDBgEI
-        AU8CTgGXAV4CXAHOAzUBVwMVAR0BYgJYAekBYQEJAQAB/wFZAkIB9QFeAlgB3QNMAZMDBAEGtAADBAEF
-        AVoCVwG9AVgCVgHBAxkBIwMBAQIPAAEBAxABFQNEAXoBZAJZAewDGgEkGAADAgEDAxIBGAMfASwBUgJQ
-        AaMBUgJRAaEDBwEKA1EBogNWAbYBRQJEAXwDCgEOAV4CWwHZAUoCSQGJAx0BKQMNARK8AANBAXIBZAJZ
-        AewDFgEfHAADCAELA1EBogFYAlYBuSgAAx4BKwFNAkwBkQMYASIEAAMtAUYDSgGKAxMBGsgAAV4CWwHZ
-        AyEBMCgAAV4CWwHZAyMBMyQAAUcCRgGAAxMBGgwAAx8BLQMuAUfEAAMgAS4BYAJcAdQsAAFVAlMBrQFO
-        Ak0BlSAAAw0BEQFSAlABpBAAAwoBDgNQAZoDBAEGwAADPAFmA1YBtgMgAS4DTAGSAVwCWgHNAVwCWgHN
-        A0wBkwMgAS4DBAEFBAADDQESA0IBdgFhAQkBAAH/AWEBCQEAAf8BXAJZAcwgAANIAYUDJgE5AUgCRwGD
-        AzsBZQMFAQcDQwF3AT0CPAFnAzsBYwE+Aj0BasAAAzwBZgFnAVkBVwHyAWoBQQE/AfkBYQEJAQAB/wFh
-        AQkBAAH/AWEBCQEAAf8BYQEJAQAB/wFqAUEBPwH5A0oBjQMNARIDWQHHAWEBCQEAAf8BYQEJAQAB/wFh
-        AQkBAAH/AVwCWQHMIAABRgJFAX4DGAEiAxoBJQM3AVoBSQJIAYcDKAE9AyYBOAMYASIBRwJGAYHAAAM1
-        AVcBYQEJAQAB/wFhAQkBAAH/AWEBCQEAAf8BYQEJAQAB/wFhAQkBAAH/AWEBCQEAAf8BYQEJAQAB/wFh
-        AQkBAAH/AWECWwHhAWEBCQEAAf8BYQEJAQAB/wFhAQkBAAH/AWEBCQEAAf8BVwJWAbggAAFMAksBjwMw
-        AUwBPQI8AWcDOAFeAxsBJgM6AWIDOgFhAzUBVwFFAkQBfMQAAWICSAH2AWEBCQEAAf8BYQEJAQAB/wFh
-        AQkBAAH/AWEBCQEAAf8BYQEJAQAB/wFhAQkBAAH/AWEBCQEAAf8BYQEJAQAB/wFhAQkBAAH/AWEBCQEA
-        Af8BYQEJAQAB/wFhAQkBAAH/AzcBWiAAA04BmAI9ATwBZxQAA04BmQMxAU3EAANLAY4BYQEJAQAB/wFh
-        AQkBAAH/AWEBCQEAAf8BYQEJAQAB/wFhAQkBAAH/AWEBCQEAAf8BYQEJAQAB/wFhAQkBAAH/AWEBCQEA
-        Af8BYQEJAQAB/wFhAQkBAAH/AVwCWAHRAwcBCiAAA04BmANIAYYEAAMGAQgDHAEnBAADCAELAV0CWQHX
-        AzEBTcQAAxYBHgFfAlcB6AFhAQkBAAH/AWEBCQEAAf8BYQEJAQAB/wFhAQkBAAH/AWEBCQEAAf8BYQEJ
-        AQAB/wFhAQkBAAH/AWEBCQEAAf8BYQEJAQAB/wFgAisB/AIxATABTSQAAUYCRQF+AWcBWQFXAfIDRAF5
-        AV0CWQHSAWEBCQEAAf8DUwGqA1EBogFZAkIB9QMgAS7IAAMVAR0BYAJbAdYBYQEJAQAB/wFhAQkBAAH/
-        AWEBCQEAAf8BYQEJAQAB/wFhAQkBAAH/AWEBCQEAAf8BYQEJAQAB/wFdAk4B8AMvAUkDAgEDJAADGAEi
-        AVkCQgH1AWEBCQEAAf8BYQEJAQAB/wFhAQkBAAH/AWEBCQEAAf8BZwFZAVcB8gMuAUjQAAMVAR0BTQJM
-        AZEBXgJaAdgBXwEjASEB+wFhAQkBAAH/AWEBCQEAAf8BZQJeAeUBVQJTAa0DJQE3MAADIQEwA1EBogFc
-        AlkBzAFcAlkBzAFYAlYBuQM4AV0DAQEC4AADIQEwAwQBBv8AEQABQgFNAT4HAAE+AwABKAMAAVADAAEU
-        AwABAQEAAQEFAAHwFwAD/wEAAc8B/wGfAv8HAAHHAf8BGAkAAccB/wEYCQAB8QH8ATgBAAEBBwAB+AFw
-        AXwBAAEBBwAB/AEBAfwBAAEBBwAB+AEAAfwBAAEBBwAB8AFwAX4BAAEHBwAB8QH8AX8B4gE/BwAB8wH/
-        AT8B5wE/BwAB5wH/AT8BzwEfBwAB4AEIAT8BwAEfBwAB4AEAAT8BwAEfBwAB4AEAAT8BwAEfBwAB8AEA
-        AT8BzwGfBwAB8AEAAT8ByQEfBwAB8AEAAX8BwAEfBwAB+AEAAX8BwAE/BwAB/AEBAf8B4AE/BwAB/wHP
-        A/8HAAs=
+        AwIBAwNFAX0BWgJXAcUsAANKAYoBXAJZAcwDBwEKCAADNQFVAWABCAEAAf8BYAEIAQAB/wFgAQgBAAH/
+        AWABCAEAAf8BYAEIAQAB/wFgAQgBAAH/AWABCAEAAf8BYAEIAQAB/wFgAQgBAAH/AWABCAEAAf8BYAEI
+        AQAB/wFgAQgBAAH/AWABCAEAAf8BYAEIAQAB/wFgAQgBAAH/AWABCAEAAf8BYAEIAQAB/wMSARmwAAFM
+        AksBkAFbAlgBxgMlATccAAMUARsDSgGNAVgCVgHBAxEBFwwAAxgBIQFgAQgBAAH/AWABCAEAAf8BYAEI
+        AQAB/wFgAQgBAAH/AWABCAEAAf8BYAEIAQAB/wFhAlgB5gFhAl0B4gFgAQgBAAH/AV4CWgHVAWABCAEA
+        Af8BYAEIAQAB/wFgAQgBAAH/AWABCAEAAf8BYAEIAQAB/wFgAQgBAAH/AWACWgHeuAABOgI5AWABagJB
+        AfkDUwGqAwwBEAwAAwQBBgM/AW0BYgJIAfYBWQJXAb8DBAEGFAABXgJbAdkBYAEIAQAB/wFgAQgBAAH/
+        AWABCAEAAf8BYAEIAQAB/wFgAQgBAAH/AT0CPAFnAU4CTQGWAWABCAEAAf8DNwJaAlgBwAFgAQgBAAH/
+        AWABCAEAAf8BYAEIAQAB/wFgAQgBAAH/AWABCAEAAf8BRwJGAYC8AAMcASgDTgGZAU4BOwEsAf0BYQJa
+        AeQBXAJZAcwBYAJaAd4BWQJCAfUBXAJYAdEDKQE+HAADPAFmAWABCAEAAf8BYAEIAQAB/wFgAQgBAAH/
+        AWABCAEAAf8BYgJYAe8DGQEjAz0BaQFgAQgBAAH/AycBOwMwAUsBTgE7ASwB/QFgAQgBAAH/AWABCAEA
+        Af8BYAEIAQAB/wFlAVIBUQH0AyMBM7gAAwcBCgNFAX0BYgJYAe8BUwJPAaUDNQFWAxMBGgMrBEIBdQFh
+        AlwB3AFWAlUBsQMYASEYAAMLAQ8BVgJVAbQBYQJaAeQBagJBAfkBYAEIAQAB/wFcAlgB0QMGAQgBTwJO
+        AZcBXgJcAc4DNQFXAxUBHQFiAlgB6QFgAQgBAAH/AVkCQgH1AV4CWAHdA0wBkwMEAQa0AAMEAQUBWgJX
+        Ab0BWAJWAcEDGQEjAwEBAg8AAQEDEAEVA0QBegFkAlkB7AMaASQYAAMCAQMDEgEYAx8BLAFSAlABowFS
+        AlEBoQMHAQoDUQGiA1YBtgFFAkQBfAMKAQ4BXgJbAdkBSgJJAYkDHQEpAw0BErwAA0EBcgFkAlkB7AMW
+        AR8cAAMIAQsDUQGiAVgCVgG5KAADHgErAU0CTAGRAxgBIgQAAy0BRgNKAYoDEwEayAABXgJbAdkDIQEw
+        KAABXgJbAdkDIwEzJAABRwJGAYADEwEaDAADHwEtAy4BR8QAAyABLgFgAlwB1CwAAVUCUwGtAU4CTQGV
+        IAADDQERAVICUAGkEAADCgEOA1ABmgMEAQbAAAM8AWYDVgG2AyABLgNMAZIBXAJaAc0BXAJaAc0DTAGT
+        AyABLgMEAQUEAAMNARIDQgF2AWABCAEAAf8BYAEIAQAB/wFcAlkBzCAAA0gBhQMmATkBSAJHAYMDOwFl
+        AwUBBwNDAXcBPQI8AWcDOwFjAT4CPQFqwAADPAFmAWcBWQFYAfIBagJBAfkBYAEIAQAB/wFgAQgBAAH/
+        AWABCAEAAf8BYAEIAQAB/wFqAkEB+QNKAY0DDQESA1kBxwFgAQgBAAH/AWABCAEAAf8BYAEIAQAB/wFc
+        AlkBzCAAAUYCRQF+AxgBIgMaASUDNwFaAUkCSAGHAygBPQMmATgDGAEiAUcCRgGBwAADNQFXAWABCAEA
+        Af8BYAEIAQAB/wFgAQgBAAH/AWABCAEAAf8BYAEIAQAB/wFgAQgBAAH/AWABCAEAAf8BYAEIAQAB/wFh
+        AlsB4QFgAQgBAAH/AWABCAEAAf8BYAEIAQAB/wFgAQgBAAH/AVcCVgG4IAABTAJLAY8DMAFMAT0CPAFn
+        AzgBXgMbASYDOgFiAzoBYQM1AVcBRQJEAXzEAAFiAkgB9gFgAQgBAAH/AWABCAEAAf8BYAEIAQAB/wFg
+        AQgBAAH/AWABCAEAAf8BYAEIAQAB/wFgAQgBAAH/AWABCAEAAf8BYAEIAQAB/wFgAQgBAAH/AWABCAEA
+        Af8BYAEIAQAB/wM3AVogAANOAZgCPQE8AWcUAANOAZkDMQFNxAADSwGOAWABCAEAAf8BYAEIAQAB/wFg
+        AQgBAAH/AWABCAEAAf8BYAEIAQAB/wFgAQgBAAH/AWABCAEAAf8BYAEIAQAB/wFgAQgBAAH/AWABCAEA
+        Af8BYAEIAQAB/wFcAlgB0QMHAQogAANOAZgDSAGGBAADBgEIAxwBJwQAAwgBCwFdAlkB1wMxAU3EAAMW
+        AR4BXwJXAegBYAEIAQAB/wFgAQgBAAH/AWABCAEAAf8BYAEIAQAB/wFgAQgBAAH/AWABCAEAAf8BYAEI
+        AQAB/wFgAQgBAAH/AWABCAEAAf8BXwIrAfwCMQEwAU0kAAFGAkUBfgFnAVkBWAHyA0QBeQFdAlkB0gFg
+        AQgBAAH/A1MBqgNRAaIBWQJCAfUDIAEuyAADFQEdAWACWwHWAWABCAEAAf8BYAEIAQAB/wFgAQgBAAH/
+        AWABCAEAAf8BYAEIAQAB/wFgAQgBAAH/AWABCAEAAf8BXQJOAfADLwFJAwIBAyQAAxgBIgFZAkIB9QFg
+        AQgBAAH/AWABCAEAAf8BYAEIAQAB/wFgAQgBAAH/AWcBWQFYAfIDLgFI0AADFQEdAU0CTAGRAV4CWgHY
+        AV8BIwEhAfsBYAEIAQAB/wFgAQgBAAH/AWUCXgHlAVUCUwGtAyUBNzAAAyEBMANRAaIBXAJZAcwBXAJZ
+        AcwBWAJWAbkDOAFdAwEBAuAAAyEBMAMEAQb/ABEAAUIBTQE+BwABPgMAASgDAAFQAwABFAMAAQEBAAEB
+        BQAB8BcAA/8BAAHPAf8BnwL/BwABxwH/ARgJAAHHAf8BGAkAAfEB/AE4AQABAQcAAfgBcAF8AQABAQcA
+        AfwBAQH8AQABAQcAAfgBAAH8AQABAQcAAfABcAF+AQABBwcAAfEB/AF/AeIBPwcAAfMB/wE/AecBPwcA
+        AecB/wE/Ac8BHwcAAeABCAE/AcABHwcAAeABAAE/AcABHwcAAeABAAE/AcABHwcAAfABAAE/Ac8BnwcA
+        AfABAAE/AckBHwcAAfABAAF/AcABHwcAAfgBAAF/AcABPwcAAfwBAQH/AeABPwcAAf8BzwP/BwAL
 </value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
